tests/spec/non_conformant/errors/extend/selector/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/extend/selector"

#[allow(unused)]
use super::runner;

mod missing;

mod optional;

mod simple;
